--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,5 +1,9 @@
 [deps]
+BioSequences = "7e6ae17a-c86d-528c-b3b9-7f778a29fe59"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
+ReadDatastores = "70a005b8-9d8a-11e9-0d98-c909fa2e52d2"
 
 [compat]
+BioSequences = "2"
 Documenter = "0.24"
